background fix on mobile

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -79,6 +79,9 @@ body {
   background-size: cover;
   background-color: #333;
   color: #fff; }
+  @media only screen and (max-width: 480px) {
+    body {
+      background-size: auto 100%; } }
 
 .clear {
   clear: both; }
