--- a/static/styles/critical.css
+++ b/static/styles/critical.css
@@ -51,6 +51,9 @@ body {
   background-size: cover;
   background-color: #333;
   color: #fff; }
+  @media only screen and (max-width: 480px) {
+    body {
+      background-size: auto 100%; } }
 
 .social {
   padding: 0;
